--- a/css/main.css
+++ b/css/main.css
@@ -105,8 +105,8 @@ textarea {
    }
 
    #introduction, #newsletter {
-       height: 350px;
-       padding-top: 25px;
+       height: 20%;
+       padding: 25px 30px;
 
    }
 
@@ -121,7 +121,7 @@ textarea {
 
    /***** HEADER *****/
 
-   .gradient {
+   header {
       background:
         linear-gradient(to bottom right,
         rgba(0,176,229,.85),
@@ -129,44 +129,40 @@ textarea {
         ),
         url("../img/hero.jpg");
       background-size: cover;
-      height: 400px;
+      margin: 0 auto;
 }
 
-   header img {
-     width: 65%;
-     margin: 0 auto;
-     display: block;
-     padding-top: 45px;
-   }
-
-   nav {
-       float: right;
-       padding: 75px 25px;
-   }
-   nav ul li{
-       display: inline-block;
-   }
-   nav ul li a {
-       text-transform: uppercase;
-       text-decoration: none;
-       font-size: 18px;
-       color: #ffffff;
-       padding-left: 80px;
-   }
-
-.nav-bar {
-    background: #ffffff;
-    height: 70px;
-    box-shadow: 0px 1px 2px 0px #b9b9b9;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    clear: both;
+  nav {
+    float: right;
+    padding: 0 30px;
+}
+  nav ul li{
+    display: inline-block;
+    padding-left: 20px;
+    float: right;
+}
+  nav ul li a {
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 16px;
+    color: #ffffff;
 }
 
    header h1 {
       font-family: "Monoton", sans-serif;
       color: #3d3d3d;
       font-size: 30px;
+      float:left;
+      font-weight: lighter;
+      padding-left: 30px;
+   }
+
+   header img {
+    width: 55%;
+    margin: 0 auto;
+    display: block;
+    clear: both;
+    padding-bottom: 20px;
    }
 
    /***** GRID *****/
@@ -177,8 +173,7 @@ textarea {
    }
 
    .half-width {
-       width: 50%;
-       float: left;
+       /* width: 50%;*/
    }
 
    /***** INTRODUCTION *****/
@@ -194,13 +189,12 @@ textarea {
 
 #newsletter {
   background: #3d3d3d;
-  padding: 25px 30px;
 }
 
 #newsletter h2 {
   font-family: "Monoton", sans-serif;
   color: #ffffff;
-  font-size: 30px;
+  font-size: 26px;
   font-weight: lighter;
   word-spacing: 10px;
 }
@@ -225,7 +219,7 @@ textarea {
   padding: 15px 40px 15px 40px;
   text-decoration: none;
   text-transform: uppercase;
-  margin-top: 25px;
+  margin: 25px 0;
 }
 
 #newsletter .btn:hover {
@@ -351,79 +345,70 @@ footer {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen
-     and (min-device-width: 768px)
-     and (max-device-width: 1024px)
-     and (-webkit-min-device-pixel-ratio: 1) {
+   /*
+     ##Device = Desktops
+     ##Screen = 1281px to higher resolution desktops
+   */
 
-       header img {
-         width: 35%;
-         margin: 0 auto;
-         display: block;
-         padding-top: 45px;
-       }
+   @media (min-width: 1281px) {
+
+     header img {
+       width: 20%;
+     }
 
    }
 
-   @media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (orientation: landscape)
-  and (-webkit-min-device-pixel-ratio: 1) {
+   /*
+     ##Device = Laptops, Desktops
+     ##Screen = B/w 1025px to 1280px
+   */
+
+   @media (min-width: 1025px) and (max-width: 1280px) {
+
+     header img {
+       width: 20%;
+     }
+
+   }
+
+   /*
+     ##Device = Tablets, Ipads (portrait)
+     ##Screen = B/w 768px to 1024px
+   */
+
+   @media (min-width: 768px) and (max-width: 1024px) {
+
+     header img {
+       width: 27%;
+     }
+
+   }
+
+   /*
+     ##Device = Tablets, Ipads (landscape)
+     ##Screen = B/w 768px to 1024px
+   */
+
+   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+     header img {
+       width: 27%;
+     }
+
+   }
+
+   /*
+     ##Device = Low Resolution Tablets, Mobiles (Landscape)
+     ##Screen = B/w 481px to 767px
+   */
+
+   @media (min-width: 481px) and (max-width: 767px) {
 
     header img {
-      width: 26%;
-      margin: 0 auto;
-      display: block;
-      padding-top: 45px;
+      width: 30%;
     }
 
-
-
-}
-
-   @media screen
-     and (min-device-width: 1200px)
-     and (max-device-width: 1600px)
-     and (-webkit-min-device-pixel-ratio: 2)
-     and (min-resolution: 192dpi) {
-    /* Style adjustments for viewports that meet the condition */
-
-    .gradient {
-       background-size: cover;
-       height: 500px;
- }
-
-    header img {
-      width: 25%;
-      margin: 0 auto;
-      display: block;
-      padding-top: 45px;
-    }
-
-    p {
-        font-size: 20px;
-        line-height: 32px;
-        padding: 0 130px;
-      }
-
-      #newsletter h2 {
-        font-family: "Monoton", sans-serif;
-        color: #ffffff;
-        font-size: 36px;
-        font-weight: lighter;
-      }
-
-      #introduction h2 {
-          text-align: center;
-          color: #3d3d3d;
-          font-size: 36px;
-          line-height: 30px;
-      }
-
-}
-
-
+   }
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
