--- a/css/main.css
+++ b/css/main.css
@@ -106,56 +106,123 @@ textarea {
 
    #introduction, #newsletter {
        height: 20%;
-       padding: 25px 30px;
 
    }
 
-   #footer {
-      height: 95px;
+   h1 {
+     margin: 0;
    }
 
    p {
-       line-height: 25px;
+       line-height: 28px;
        padding: 0 30px;
      }
+
+     a {
+       text-decoration: none;
+     }
+
+     /***** GRID *****/
+
+     .full-width {
+       width: 100%;
+       margin: 0 auto;
+     }
+
+     .half-width {
+       float: left;
+       width: 50%;
+     }
+
+     .one-third-width {
+       width: auto;
+       float: left;
+     }
+
+     .two-third-width {
+       width: auto;
+       float:right;
+     }
+
 
    /***** HEADER *****/
 
    header {
       background:
-        linear-gradient(to bottom right,
-        rgba(0,176,229,.85),
-        rgba(0,176,229,.88)
+        linear-gradient(to right,
+        rgba(215,65,167,.88),
+        rgba(230,250,48,.88)
         ),
         url("../img/hero.jpg");
-      background-size: cover;
+      background-size: auto;
       margin: 0 auto;
 }
 
-  nav {
-    float: right;
-    padding: 0 30px;
+#nav-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+
 }
-  nav ul li{
-    display: inline-block;
-    padding-left: 20px;
+
+nav {
+  float: right;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+nav ul li{
     float: right;
 }
-  nav ul li a {
+nav ul li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 16px;
-    color: #ffffff;
+    font-weight: 400;
+    color: #3a1772;
 }
 
-   header h1 {
-      font-family: "Monoton", sans-serif;
-      color: #3d3d3d;
-      font-size: 30px;
-      float:left;
-      font-weight: lighter;
-      padding-left: 30px;
+header h3 {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  color: #3a1772;
+}
+
+header h3 a {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #3a1772;
+
+}
+
+.language {
+  color: #3d3d3d;
+  font-size: 12;
+  font-weight: 600;
+  float: left;
+  padding-left: 20px;
+}
+
+  .logo {
+  font-family: "Monoton", sans-serif;
+   color: #3a1772;
+   font-size: 25px;
+   font-weight: lighter;
+   padding-left: 20px;
    }
+
 
    header img {
     width: 55%;
@@ -165,22 +232,11 @@ textarea {
     padding-bottom: 20px;
    }
 
-   /***** GRID *****/
-
-   .full-width {
-     width: 100%;
-     margin: 0 auto;
-   }
-
-   .half-width {
-       /* width: 50%;*/
-   }
-
    /***** INTRODUCTION *****/
 
 #introduction h2 {
     text-align: center;
-    color: #3d3d3d;
+    color: #d741a7;
     font-size: 26px;
     line-height: 30px;
 }
@@ -188,7 +244,8 @@ textarea {
 /***** newsletter *****/
 
 #newsletter {
-  background: #3d3d3d;
+  background: #d741a7;
+  padding: 20px 0 25px 0;
 }
 
 #newsletter h2 {
@@ -210,33 +267,38 @@ textarea {
 #newsletter .btn {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  border-radius: 0px;
+  border-radius: 5px;
   border: 0px;
-  color: #3d3d3d;
+  color: #3a1772;
   font-family: 'Mukta+Vaani', sans-serif;
   font-size: 16px;
   background: #e6fa30;
   padding: 15px 40px 15px 40px;
   text-decoration: none;
   text-transform: uppercase;
-  margin: 25px 0;
+  margin: 50px 0;
 }
 
 #newsletter .btn:hover {
-  background: #bdce26;
+  background: #e8f46d;
   text-decoration: none;
+}
+
+#btn-padding {
+  padding: 8px 0;
 }
 
 /***** footer *****/
 
 footer {
-  background: #00b0e5;
-  height: 150px;
-  padding: 20px 0 25px 0;
+    background: #3d3d3d;
+    height: 150px;
+    padding: 20px 0 25px 0;
 }
 
 #contact p {
     color: #ffffff;
+    text-align: left;
 }
 
 #contact span {
@@ -245,12 +307,24 @@ footer {
 
 #contact a {
     text-decoration: none;
-    color: #ffffff;
-    font-weight: 600;
+    color: #e6fa30;
 }
 
 #right-pad {
-    padding-right: 25px;
+    padding-right: 8px;
+}
+
+p #imprint {
+  font-size: 14px;
+  font-weight: lighter;
+  color: #999;
+}
+
+#social-media {
+  float: right;
+  width: auto;
+  margin: 0 auto;
+  padding: 15px 0;
 }
 
 
@@ -384,6 +458,57 @@ footer {
 
    }
 
+@media (min-width: 300px) and (max-width: 1024px) {
+
+#header {
+  z-index: 1;
+  position: fixed;
+}
+  .one-third-width {
+    float: left;
+
+  }
+  .two-third-width {
+    display: block;
+    float: none;
+    height: 40px;
+    width: 100%;
+    background: url(../img/burger-icon.png) no-repeat 98% center;
+   }
+
+     nav {
+       width: 100%;
+       float: center;
+     }
+     nav ul {
+         overflow: hidden;
+         background: #d741a7;
+         height: 0;
+     }
+
+     nav ul.open {
+       height: auto;
+     }
+
+     nav ul li {
+         float: none;
+         text-align: left;
+         width: 100%;
+         margin: 0;
+     }
+   nav ul li a {
+        color: #ffffff;
+        padding: 10px;
+        display: block;
+        margin: 0;
+    }
+
+    .logo {
+     padding-left: 0;
+     }
+   }
+
+
    /*
      ##Device = Tablets, Ipads (landscape)
      ##Screen = B/w 768px to 1024px
@@ -407,6 +532,17 @@ footer {
     header img {
       width: 30%;
     }
+
+    header {
+       background:
+        linear-gradient(to right,
+        rgba(215,65,167,.88),
+        rgba(230,250,48,.88)
+         ),
+        url("../img/hero.jpg");
+       background-size: cover;
+       margin: 0 auto;
+ }
 
    }
 
